# proxy_check

./: .dockerignore  .gitignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py
app/api/: routes.py  schemas.py
app/core/: clash_config.py  config.py  logging.py
app/probes/: base.py  builtin.py  delay.py  exit_geo.py  http_rtt.py  jitter.py  mihomo.py  packet_loss.py  registry.py  socks5_http.py  tcping.py  tcping_prober.py  tls_handshake.py
app/scheduler/: runner.py
app/services/: config_import.py  port_allocator.py  probe_service.py  prometheus.py  scoring.py
app/storage/: database.py  models.py  repository.py
backend/cmd/proxy-check/: main.go  main_test.go
backend/internal/api/: server.go  server_ssrf_test.go  server_test.go  static_test.go
backend/internal/clash/: config.go  config_test.go
backend/internal/config/: config.go  config_test.go
configs/: config.docker.yaml  config.example.yaml
docs/: migration-go-vs-node.md
docs/grafana/: proxy-check-v3.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.ts  main.tsx  styles.css
scripts/: download_miaospeed.sh  download_mihomo.py  download_mihomo.sh  test_download_scripts.sh
tests/: test_api.py  test_clash_config.py  test_config_import_ssrf.py  test_database_migration.py  test_logging.py  test_mihomo_health.py  test_port_allocator.py  test_prometheus.py  test_scheduler.py  test_scoring.py  test_socks5_http.py  test_tasks.py  test_tcping.py  test_v2_core.py
(+44 files in other folders)
