[project]
name = "proxy-check"
version = "0.1.0"
description = "Proxy node quality detection platform"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
    "fastapi>=0.110",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "SQLAlchemy>=2.0",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
